# RED-Safe

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  LICENSE  README.md  RED.py  build.sh  nginx.conf  postgresql.conf  server.crt  server.key  setup.sh
api-server/: CMakeLists.txt  config.hpp  main.cpp
api-server/header/: server.hpp
api-server/include/: api-server.hpp
api-server/src/: api-server.cpp  config.hpp  controller.cpp  controller.hpp  main.cpp  server.cpp  server.hpp  session.cpp  session.hpp  util.hpp
api-server/src/core/: api-server.cpp  controller.cpp  controller.hpp  session.cpp  session.hpp
api-server/src/lib/jwt-cpp/: base.h  jwt.h
api-server/src/model/: SqlConnectionManager.hpp  model.cpp  model.hpp  sql_model.cpp  sql_model.hpp
api-server/src/model/sql/: FinderModels.cpp  FinderModels.hpp  RegistrarModels.cpp  RegistrarModels.hpp  SqlConnectionManager.hpp  read.cpp  read.hpp  write.cpp  write.hpp
api-server/src/model/validator/: ParameterValidation.hpp  token.hpp
api-server/src/service/: EdgeDeviceRegistrationService.cpp  EdgeDeviceRegistrationService.hpp  EdgeRegistrationService.cpp  EdgeRegistrationService.hpp  EdgeService.cpp  EdgeService.hpp  IOSAPPService.cpp  IOSAPPService.hpp  IOSDeviceBindService.cpp  IOSDeviceBindService.hpp  IOSDeviceRegistrationService.cpp  IOSDeviceRegistrationService.hpp  TokenService.cpp  TokenService.hpp  UserLoginLogoutService.cpp  UserLoginLogoutService.hpp  UserRegistrationService.cpp  UserRegistrationService.hpp  UserService.cpp  UserService.hpp  registration_service.cpp  registration_service.hpp  service.hpp
api-server/src/util/: IOstream.hpp  crypto.hpp  folly_json.hpp  http_types.hpp  logger.hpp  response.hpp  timestamp.hpp
api-server/src/view/: view.hpp
edge/IPCscan/src/: CMakeLists.txt  main.cc
edge/IPCscan/src/app/: grpc_server.cc  grpc_server.hpp  ipc_scanner.cc
edge/IPCscan/src/network/: discovery_transport.hpp  mac_resolver.cc  udp_socket.cc  udp_socket.hpp  ws_discovery_client.cc  ws_discovery_client.hpp
edge/IPCscan/src/parser/: onvif_response_parser.cc  response_parser.hpp
edge/IPtool/: CMakeLists.txt
edge/IPtool/proto/: iptool.proto
edge/IPtool/src/: CMakeLists.txt  main.cc
edge/IPtool/src/app/: iptool_application.cc  iptool_application.hpp  network_query_service.cc  network_query_service.hpp  network_update_service.cc  network_update_service.hpp
edge/IPtool/src/common/: logging.hpp  time.cc
edge/IPtool/src/domain/: interface_detector.hpp  network_config.hpp  network_configurator.hpp  network_error.hpp  network_info_provider.hpp
edge/IPtool/src/grpc/: network_service_impl.cc  network_service_impl.hpp
edge/IPtool/src/infra/: absl_log_instantiations.cc  command_executor.cc  command_executor.hpp  default_interface_detector.cc  default_interface_detector.hpp  dns_resolver.cc  dns_resolver.hpp  posix_network_configurator.cc  posix_network_configurator.hpp  posix_network_info_provider.cc  posix_network_info_provider.hpp
edge/IPtool/src/network/: network_service.cc  network_service.hpp
edge/IPtool/src/util/: logging.cc  network_utils.cc  network_utils.hpp  time.cc
edge/MQTTservice/: CMakeLists.txt
edge/MQTTservice/cmake/: Target.cmake
edge/MQTTservice/src/: CMakeLists.txt  main.cc
edge/MQTTservice/src/client/: grpc_ipcscan_client.cc  grpc_ipcscan_client.hpp  ipcscan_client.hpp
edge/MQTTservice/src/config/: env_config_provider.cc  env_config_provider.hpp  mqtt_config.hpp
edge/MQTTservice/src/handler/: edge_command_handler.cc  edge_command_handler.hpp  ipcscan_command.cc  message_handler.hpp
edge/MQTTservice/src/mqtt/: mqtt_subscriber.cc  mqtt_subscriber.hpp
edge/MQTTservice/src/reconnect/: exponential_backoff_strategy.cc  exponential_backoff_strategy.hpp  reconnect_strategy.hpp
edge/MQTTservice/src/uploader/: edge_service_uploader.cc  edge_service_uploader.hpp  result_uploader.hpp
edge/MQTTservice/src/util/: environment.cc  environment.hpp
edge/RED_SAFE_EDGE_CORE/: CMakeLists.txt  Dockerfile  build.sh
edge/RED_SAFE_EDGE_CORE/cmake/: CLangFormat.cmake
edge/RED_SAFE_EDGE_CORE/proto/: ipcscan.proto  red_safe_edge_core.proto
edge/RED_SAFE_EDGE_CORE/src/: CMakeLists.txt  main.cc
edge/RED_SAFE_EDGE_CORE/src/common/: CMakeLists.txt  logging.cc  logging.hpp  time.cc
edge/RED_SAFE_EDGE_CORE/src/core/: CMakeLists.txt  config.cc  config.hpp  edge_application.cc  edge_application.hpp  env_setting.cc  env_setting.hpp  http_client.cc  mqtt_workflow.cc  mqtt_workflow.hpp
edge/RED_SAFE_EDGE_CORE/src/grpc/: CMakeLists.txt  grpc_client.cc  grpc_client.hpp  grpc_server.cc  ip_resolver.cc  ip_resolver.hpp
edge/RED_SAFE_EDGE_CORE/src/http/: CMakeLists.txt  http_client.cc  http_client.hpp
edge/RED_SAFE_EDGE_CORE/src/ipcscan/: CMakeLists.txt
edge/RED_SAFE_EDGE_CORE/src/mqtt/: CMakeLists.txt  absl_log_instantiations.cc  dependency_injection.hpp  mqtt_connection.cc  mqtt_handler.cc  mqtt_traits.hpp  mqtt_workflow.cc  mqtt_workflow.hpp
edge/RED_SAFE_EDGE_CORE/src/network/: CMakeLists.txt  network_config.cc  network_config.hpp  network_service.cc  network_service.hpp
edge/RED_SAFE_EDGE_CORE/src/proto/: CMakeLists.txt  red_safe_edge_core.proto
edge/RED_SAFE_EDGE_CORE/src/sql/: CMakeLists.txt  SqlCRUD.cc  SqlCRUD.hpp  SqlConnectionManager.hpp  config_repository.cc  config_repository.hpp
edge/RED_SAFE_EDGE_CORE/src/util/: CMakeLists.txt  logging.cc  time.cc  time.hpp
edge/RED_SAFE_EDGE_CORE拷貝/src/: CMakeLists.txt  main.cc
edge/RED_SAFE_EDGE_CORE拷貝/src/common/: logging.cc  logging.hpp  time.cc  time.hpp
edge/RED_SAFE_EDGE_CORE拷貝/src/core/: config.cc  config.hpp  edge_application.cc  edge_application.hpp  http_client.cc  mqtt_workflow.cc  mqtt_workflow.hpp
edge/RED_SAFE_EDGE_CORE拷貝/src/ipcscan/: CMakeLists.txt
server/fall_Inference_service/: CMakeLists.txt  Dockerfile  build.sh  fall_probability_model_ts.pt
server/fall_Inference_service/proto/: FallService.proto
server/fall_Inference_service/src/: CMakeLists.txt  mian.cc
server/fall_Inference_service/src/fall_model/: CMakeLists.txt  (+4 more)
server/proto/: CMakeLists.txt  auth.proto
(+832 files in other folders)
